# task_manager

./: .env  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test_api.py
alembic/: env.py
src/core/database/: config.py
src/core/logging/: config.py
src/task/api/: dependencies.py  exeption_handlers.py  models.py  rest.py
src/task/application/interface/: task_repository.py
src/task/application/use_case/: create_task.py  delete_task.py  get_all_tasks.py  get_task.py  update_task.py
src/task/domain/: entities.py  repositories.py
src/task/domain/exeptions/: tasks_exeptions.py
src/task/infrastructure/db/: models.py  repository.py
tests/: conftest.py  test_api.py
